@@ -1,6 +1,12 @@
 2009-07-24  Milan Zamazal  <pdm@brailcom.org>
 
 	* lib/pytis/form/list.py:
+	* lib/pytis/presentation/types_.py:
+	FoldableForm documented.
+
+2009-07-24  Milan Zamazal  <pdm@brailcom.org>
+
+	* lib/pytis/form/list.py:
 	Fix incremental search in foldable forms.
 
 2009-07-24  Milan Zamazal  <pdm@brailcom.org>
